# DevNarrate

./: .bumpversion.toml  README.md  README.pypi.md  pyproject.toml
.devnarrate/: config.toml
devnarrate/: __init__.py  change_analyzer.py  config.py  git_operations.py  secret_scanner.py  server.py
tests/: conftest.py  sample_diffs.py  test_change_analyzer.py  test_config.py  test_git_operations.py  test_secret_scanner.py  test_server.py
