[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devnarrate"
version = "0.1.0a5"
description = "MCP server for developer workflow automation — smart commits, secret scanning, PR descriptions, and more."
readme = {file = "README.pypi.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "K Man"}
]
maintainers = [
    {name = "K Man"}
]
keywords = ["git", "commit", "pr", "ai", "mcp", "claude", "secrets", "security", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli]>=1.20.0",
    "tiktoken>=0.5.0",
    "detect-secrets>=1.4.0",
    "unidiff>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/kmandana/DevNarrate"
Documentation = "https://github.com/kmandana/DevNarrate#readme"
Issues = "https://github.com/kmandana/DevNarrate/issues"
Changelog = "https://github.com/kmandana/DevNarrate/releases"
